maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var sortieX:Int = 0
  var sortieY:Int = 0
  for (i<-0 to getMondeLargeur-1;j<-0 to getMondeHauteur-1){
    if (aBiscuit(i,j)){
      sortieX = i
      sortieY = j
    }
  }
  setIndication(sortieX,sortieY,0)
  tagCaseAdj()
  }
  while (!estSurBiscuit){
    var min:Int = getIndication(getX,getY)
    setDirection(Direction.NORTH)
    if (!estFaceMur){
      avance()
      if (getIndication(getX,getY)<min){
        min = getIndication(getX,getY)
      } else {recule()}
    }
    setDirection(Direction.WEST)
    if (!estFaceMur){
      avance()
      if (getIndication(getX,getY)<min){
        min = getIndication(getX,getY)
      } else {recule()}
    }
    setDirection(Direction.SOUTH)
    if (!estFaceMur){
      avance()
      if (getIndication(getX,getY)<min){
        min = getIndication(getX,getY)
      } else {recule()}
    }
    setDirection(Direction.EAST)
    if (!estFaceMur){
      avance()
      if (getIndication(getX,getY)<min){
        min = getIndication(getX,getY)
      } else {recule()}
    }
  }
  prendBiscuit
}

def tagCaseAdj(x:Int,y:Int):Unit = {
  var i:Int = getIndication(x,y)
  if (i < 9999){
    if ((y>0)&&(!aMurNord(x,y))&&(getIndication(x,y-1)==9999)){
      setIndication(x,y-1,i+1)
      tagCaseAdj(x,y-1)
    }
    if ((x>0)&&(!aMurOuest(x,y))&&(getIndication(x-1,y)==9999)){
      setIndication(x-1,y,i+1)
      tagCaseAdj(x-1,y)
    }
    if ((y<(getMondeHauteur()-1))&&(!aMurNord(x,y+1))&&(getIndication(x,y+1)==9999)){
      setIndication(x,y+1,i+1)
      tagCaseAdj(x,y+1)
    }
    if ((x<getMondeLargeur()-1)&&(!aMurOuest(x+1,y))&&(getIndication(x+1,y)==9999)){
      setIndication(x+1,y,i+1)
      tagCaseAdj(x+1,y)
    }
  }
}

